--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -309,11 +309,20 @@ color:white;
 
 }
 
-
 input[type=text]:focus, textarea:hover {
    outline: none;
    box-shadow: 0 0 5px rgb(0, 0, 0);
- }
+}
+
+input[type=password]:focus, textarea:hover {
+   outline: none;
+   box-shadow: 0 0 5px rgb(0, 0, 0);
+}
+
+input[type=email]:focus, textarea:hover {
+   outline: none;
+   box-shadow: 0 0 5px rgb(0, 0, 0);
+}
 
 #registratieKnop a:hover {
    opacity: 0.7;
