--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -337,20 +337,64 @@ input[type=text]:focus, textarea:hover {
    float:left;
    position: relative;
    width: 40%;
-   padding-bottom : 25%; 
+   padding-bottom : 3.5%; 
    margin:1.66%;
    background-position:center center;
    background-repeat:no-repeat;
    background-size:cover; 
    background-color:#F1F1F1;
    font-size:100%;
+   margin-left: 10%;
    
 }
 @media only screen and (max-width: 700px) {
 
    body .assortiment-first-text { 
-      font-size: 0.5em; 
+      font-size: 0.5em;
+      
+   }
+   @media only screen and (max-width: 800px) {
+
+      body .assortiment-first-text { 
+         font-size: 0.7em;
+         
+      }
    }
 
 }
 .img_1-1{background-image:url('../images/Spanje.png');}
+
+.img_1-2{background-image:url('../images/spanje2.jpg');
+margin-left: 10%;}
+
+.assortiment-second-text
+{
+   float:left;
+   position: relative;
+   width: 40%;
+   padding-bottom : 3.5%; 
+   margin:1.66%;
+   background-position:center center;
+   background-repeat:no-repeat;
+   background-size:cover; 
+   background-color:#F1F1F1;
+   font-size:100%;
+   padding-right: 5%;
+   
+}
+
+@media only screen and (max-width: 700px) {
+
+   body .assortiment-second-text { 
+      font-size: 0.5em;
+      
+   }
+}
+
+@media only screen and (max-width: 800px) {
+
+   body .assortiment-second-text { 
+      font-size: 0.7em;
+      
+   }
+}
