--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -411,3 +411,13 @@ textarea:hover {
 
 .img_1-2{background-image:url('../images/spanje2.jpg');
 margin-left: 10%;}
+
+.img_4-1{background-image:url('../images/egypte.png');}
+
+.img_4-2{background-image:url('../images/egypte2.jpg');
+margin-left: 10%;}
+
+.img_5-1{background-image:url('../images/frankrijk.png');}
+
+.img_5-2{background-image:url('../images/egypte2.jpg');
+margin-left: 10%;}
