turkije assortiment pagina

--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -411,3 +411,13 @@ textarea:hover {
 
 .img_1-2{background-image:url('../images/spanje2.jpg');
 margin-left: 10%;}
+
+.img_2-1{background-image:url('../images/turkije.png');}
+
+.img_2-2{background-image:url('../images/turkije1-2.jpg');
+margin-left: 10%;}
+
+.img_3-1{background-image:url('../images/turkije2.png');}
+
+.img_3-2{background-image:url('../images/turkije3-2.jpg');
+margin-left: 10%;}
