--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -421,3 +421,12 @@ margin-left: 10%;}
 
 .img_5-2{background-image:url('../images/egypte2.jpg');
 margin-left: 10%;}
+
+.img_2-1{background-image:url('../images/turkije.png');}
+
+.img_2-2{background-image:url('../images/turkije1-2.jpg');
+margin-left: 10%;}
+
+.img_3-1{background-image:url('../images/turkije2.png');}
+
+.img_3-2{background-image:url('../images/turkije3-2.jpg')};
