--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -272,6 +272,11 @@ h7.faq {
    margin-left: 700px;
 }
 
+#faqFooterFix
+{
+   margin-top: 5%;
+}
+
 .header2 {
    width: 100%;
    height: 30%;
@@ -290,28 +295,66 @@ h7.faq {
    height: 10%;
    background-color: green;
    position: relative;
+
+  
 }
 
 .info {
-   height: 40%;
+   
+   height: min-content;
    background-color: rgb(197, 213, 225);
    width: 20%;
-   position: absolute;
-   margin-right: -35%;
+   position: relative;
+   margin-left: -60%;
+   
 }
 
 .contact_toptext {
    text-align: center;
-   margin-left: -66%;
+   margin-left: -40%;
 }
 
 #contact {
-   margin-left: -50%;
+   margin-right: 60%;
+   margin-left: 0%;
 }
 
 #contact_button {
-   background-color: red;
+   background-color: blue;
    color: white;
+}
+
+.contactArea
+{
+   width: 80%;
+   resize: vertical;
+   padding: 15px;
+   border-radius: 15px;
+   border: 0;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+   height: 150px;
+}
+
+.contactInput
+{
+   box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
+   border-radius: 10px;
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   width: 80%;
+}
+
+.buttonContact
+{
+   appearance: none;
+   -webkit-appearance: none;
+   padding: 10px;
+   border: none;
+   background-color: blue;
+   color: #fff;
+   font-weight: 600;
+   border-radius: 5px;
+   width: 80%;
+   margin-bottom: 5%;
 }
 
 .assortiment_footer {
@@ -353,14 +396,16 @@ textarea:hover {
 }
 
 
-.Reviewheader {
-   text-align: center;
+.Reviewheader 
+{
+   margin-left: 15%;
 
 }
 
 .review-form {
+   
    width: 40%;
-   margin-left: 40%;
+   margin-left: 0%;
    padding-left: 5%;
    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.06);
 }
@@ -368,8 +413,8 @@ textarea:hover {
 .input {
    box-shadow: 0 0 15px 4px rgba(0, 0, 0, 0.06);
    border-radius: 10px;
-   font-family: Verdana, Geneva, Tahoma, sans-serif
-   
+   font-family: Verdana, Geneva, Tahoma, sans-serif;
+   width: 80%;
 }
 
 .textarea {
@@ -381,6 +426,11 @@ textarea:hover {
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
    height: 150px;
 
+}
+
+.select
+{
+   width:50%;
 }
 
 .selection_show {
@@ -396,13 +446,18 @@ textarea:hover {
    -webkit-appearance: none;
    padding: 10px;
    border: none;
-   background-color: #3F51B5;
+   background-color: blue;
    color: #fff;
    font-weight: 600;
    border-radius: 5px;
    width: 100%;
    margin-bottom: 5%;
 }
+
+
+
+
+
 
 .assortiment-first-image {
    float: left;
@@ -419,7 +474,7 @@ textarea:hover {
 .assortiment-first-text {
    float: left;
    position: relative;
-   width: 40%;
+   width: 80%;
    padding-bottom: 3.5%;
    margin: 1.66%;
    background-position: center center;
@@ -427,8 +482,8 @@ textarea:hover {
    background-size: cover;
    background-color: #F1F1F1;
    font-size: 100%;
-   margin-left: 10%;
-
+   margin-left: -10%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 .assortiment-second-text {
@@ -443,14 +498,15 @@ textarea:hover {
    background-color: #F1F1F1;
    font-size: 100%;
    padding-right: 5%;
-
+   margin-left: -0.5%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 @media only screen and (max-width: 800px) {
 
    body .assortiment-first-text {
       font-size: 0.4em;
-
+      
    }
 
    body .assortiment-second-text {
@@ -460,13 +516,28 @@ textarea:hover {
 
 }
 
+@media only screen and (max-width: 700px) {
+   .img_1-1 {
+      background-image: url('../images/Spanje.png');
+      width: 80%;
+      height: 96%;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+   }
+}
+
+
 .img_1-1 {
    background-image: url('../images/Spanje.png');
+   width: 80%;
+   height: 96%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 .img_1-2 {
    background-image: url('../images/spanje2.jpg');
-   margin-left: 10%;
+   width: 45%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
+
 }
 
 .img_4-1 {
@@ -489,19 +560,29 @@ textarea:hover {
 
 .img_2-1 {
    background-image: url('../images/turkije.png');
+   width: 80%;
+   height: 96%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 .img_2-2 {
    background-image: url('../images/turkije1-2.jpg');
    margin-left: 10%;
+   width: 45%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 .img_3-1 {
    background-image: url('../images/turkije2.png');
+   width: 80%;
+   height: 90%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 .img_3-2 {
-   background-image: url('../images/turkije3-2.jpg')
+   background-image: url('../images/turkije3-2.jpg');
+   width: 45%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
 ;
@@ -535,3 +616,4 @@ textarea:hover {
 .card_header {
    text-align: center;
 }
+
