--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -311,7 +311,14 @@ h7.faq {
 
 }
 
-
+.Contact_Background
+{
+   background-image: url("../images/contact1.jpg");
+   background-repeat: no-repeat;
+   background-position: center;
+  
+   
+}
 
 .contact_toptext {
    text-align: center;
@@ -369,7 +376,6 @@ h7.faq {
    height: 40%;
    background-color: #F1F1F1;
    position: absolute;
-
 }
 
 input[type=text]:focus,
@@ -408,15 +414,12 @@ textarea:hover {
    padding: 0px;
    overflow-x: hidden; 
    
+   
 }
-
-
 
 .Reviewheader {
    margin-left: 45%;
    width: 100%;
-   
-  
    
 }
 
@@ -426,10 +429,9 @@ textarea:hover {
    margin-left: 30%;
    padding-left: 5%;
    box-shadow: 0px 0px 5px 5px rgba(0, 0, 0, 0.06);
-   background-color: rgba(207, 145, 53, 0.795);
+   background-color: rgba(216, 132, 5, 0.411);
    
 }
-
 
 
 .ReviewFooter
@@ -714,4 +716,5 @@ textarea:hover {
    background-color:rgb(197, 213, 225, 0.5);
 }
 
-
+ 
+ 
