--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -67,6 +67,11 @@ body {
    width: 200px;
 }
 
+.index_Background
+{
+   background-color: rgba(221, 220, 220, 0.938);
+}
+
 /* einde section 2 */
 
 /* complete footer */
@@ -80,6 +85,7 @@ footer {
    background: rgb(53, 58, 64);
    padding-top: 1.2em;
    padding-bottom: 0.6em;
+   
 }
 
 .bottomFooter {
@@ -279,19 +285,17 @@ h4 {
    
 }
 
-h7.faq {
-   color: black;
-   font-size: 28px;
-   text-align: center;
-   margin-left: 45%;
-   
-}
+
 
 #faqFooterFix {
-   margin-top: 5%;
+   position: absolute;
+   bottom: -30%;
+   width: 100%;
+   height: 2.5rem;
+  
+ 
+   
 }
-
-
 
 .header2 {
    width: 100%;
@@ -304,6 +308,28 @@ h7.faq {
    margin: 0 auto;
    font-size: 4em;
    color: white;
+}
+
+.header_faq
+{
+   text-align: center;
+   width: 100%;
+   height: 30%;
+   background-color: rgb(197, 213, 225);
+   display: flex;
+}
+
+.header_faq h1
+{
+   margin: 0 auto;
+   font-size: 4em;
+   color: white;
+   
+}
+
+.faq_height
+{
+  margin-top: 5%;
 }
 
 .form {
@@ -341,6 +367,13 @@ h7.faq {
 #contact_button {
    background-color: blue;
    color: white;
+   width: 30%;
+   margin-left: 5%;
+}
+
+#contact_naam,#contact_onderwerp,#contact_email
+{
+   width: 50%;
 }
 
 .contactArea {
@@ -426,19 +459,28 @@ textarea:hover {
 }
 
 .Reviewheader {
-   margin-left: 45%;
+   text-align: center;
    width: 100%;
-   
+   background-color: rgb(197, 213, 225);
+}
+
+.Reviewheader h1 
+{
+   margin: 0 auto;
+   font-size: 4em;
+   color: white;
 }
 
 .review-form {
   
+   margin-top: 3%;
+   height: min-content;
    width: 40%;
-   margin-left: 30%;
- 
-   
-   
-   
+   margin-left: 30%;  
+   background-color: rgba(255, 255, 255, 0.575);
+   padding-left: 5%;
+   padding-right: 5%;
+   text-align: center;
 }
 
 
@@ -479,7 +521,6 @@ textarea:hover {
 
 .buttonReview {
 
-
    appearance: none;
    -webkit-appearance: none;
    padding: 10px;
@@ -488,15 +529,11 @@ textarea:hover {
    color: #fff;
    font-weight: 600;
    border-radius: 5px;
-   width: 60%;
+   width: 30%;
    margin-bottom: 5%;
-   margin-left: 	10%;
+   margin-left: 	5%;
+   
 }
-
-
-
-
-
 
 .assortiment-first-image {
    float: left;
@@ -658,9 +695,9 @@ textarea:hover {
    background-color: rgb(197, 213, 225);
    width: 20%;
    position: absolute;
-   margin-left: 60%;
+   margin-left: 55%;
+   margin-top: 5%;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-   ;
    height: min-content;
 }
 
@@ -696,7 +733,7 @@ textarea:hover {
 
    height: min-content;
    background-color: rgb(197, 213, 225);
-   width: 30%;
+   width: 40%;
    position: relative;
    margin-left: 10%;
    font-size: 0, 5em;
@@ -737,9 +774,29 @@ textarea:hover {
    }
 
 } 
-#boekingenTable td, th{
+
+@media only screen and (max-width: 916px) {
+   
+   #boekingenTable, td, th {
+      border:1px solid black;
+      background-color: rgba(255, 255, 255, 0.575);
+      width: 100%;
+      font-size:xx-small;
+   }
+   
+  
+
+} 
+
+
+#boekingenTable, td, th {
    border:1px solid black;
+   background-color: rgba(255, 255, 255, 0.575);
+   width: 100%;
 }
+
+
+
 #activatieFooter{
  position: absolute;
  bottom: 0;
@@ -748,8 +805,80 @@ textarea:hover {
 } */
 }
 
-.Boekingen_Button
+.boekingen_Button
  {
-   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
-   border-radius: 10px;
+   appearance: none;
+   -webkit-appearance: none;
+   padding: 10px;
+   border: none;
+   background-color: blue;
+   color: #fff;
+   font-weight: 600;
+   border-radius: 5px;
+   width: 60%;
+   margin-bottom: 5%;
+   margin-left: 	5%;
+   
  }
+
+ #tijden,#aantal_volwassenen,#aantal_kinderen
+ {
+    width: 100%;
+ }
+
+ .boekingen_Background
+ {
+   background-image: url("../images/beach6.jpg");
+   background-position: left;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+   background-size:100% 100%;
+   margin-right: -5%;
+ }
+
+ 
+#bookingForm
+{
+   position: relative;
+   font-family: 'Montserrat', sans-serif;
+}
+
+
+.col-lg-6, h1,h2,#col-12,p,h5,a,h3,h4,#contact,.header_faq h2,#reviewForm,#logout,.assortiment-first-text,.assortiment-second-text,.info,#selected,#faqExample,#collapseSeven,#myTabContent
+{
+   font-family: 'Montserrat', sans-serif;
+}
+
+#aanmelden_footer
+{
+   position: absolute;
+   bottom: -30%;
+   width: 100%;
+   height: -2.5rem;
+   
+}
+
+.float-container {
+   display: inline-block;
+   width: 40%;
+   height: 50%;
+   margin-top: 3%;
+   margin-left: 20%;
+   margin-bottom: 3%;
+   padding-left: 1%;
+   padding-top: 3%;
+   padding-bottom: 3%;
+   padding-right: 3%;
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+.float-child {
+   
+   float: left;
+   margin-left: 15%;
+   
+   
+   
+   
+}  
