--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -449,11 +449,12 @@ textarea:hover {
    background-image: url("../images/background_image.png");
    background-repeat: no-repeat;
    background-position: center;
+   background-attachment: fixed;
+   background-size: 100% 100%;
    width: 100%;
    height: 100%;
-   margin: 0px;
-   padding: 0px;
-   overflow-x: hidden; 
+   margin-top: 0;
+   margin-left: 0;
    
    
 }
@@ -882,3 +883,121 @@ textarea:hover {
    margin-left: 15%;
 } 
 
+#codeVerify
+{
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   width: 20%;
+   padding-left: 3%;
+   margin-top: 3%;
+}
+
+@media only screen and (min-width: 550px) {
+   
+   #changePswrd
+{
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   padding-left: 1%;
+   margin-top: 5%;
+   width: fit-content;
+   font-size: small;
+
+ }
+ #secCode,#newPswrd,#confPaswrd,#pswrdEmail
+ {
+    width: 40%;  
+    font-size: small;
+ }
+
+ .size
+ {
+    font-size: small;
+ }
+ .Passwordheader
+{
+   text-align: center;
+   width: 100%;
+   background-color: rgb(197, 213, 225);
+   font-size: small;
+}
+  
+ }
+
+
+ .size
+ {
+    font-size: medium;
+ }
+ #secCode,#newPswrd,#confPaswrd,#pswrdEmail
+ {
+    width: 70%;
+ }
+
+#changePswrd
+{
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   padding-left: 1%;
+   width: 20%;
+   margin-top: 5%;
+   font-size: medium;
+}
+
+#pswrdSendCode
+{
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   height: min-content;
+   padding-left: 2%;
+   margin-right: 5%;
+   margin-top: 5%;
+   width: 20%;
+}
+
+#contact
+{
+   background-color: rgba(255, 255, 255, 0.575);
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   padding-left: 3%;
+}
+
+.password_Background
+{
+   background-image: url("../images/beach8.jpg");
+   background-position: center;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+}
+
+.Passwordheader
+{
+   text-align: center;
+   width: 100%;
+   background-color: rgb(197, 213, 225);
+}
+
+.Passwordheader h1
+{
+   color: white;
+}
+
+.activatieHeader
+{
+   text-align: center;
+   width: 100%;
+   background-color: rgb(197, 213, 225);
+}
+
+.activatieHeader h1
+{
+   color: white;
+}
+
+.activatie_Background
+{
+   background-image: url("../images/beach9.jpg");
+   background-position: center;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+}
