--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -79,19 +79,45 @@ footer {
    color: darkgray;
    float: left;
    width: 100%;
+   /* position:fixed;
+   bottom:0; */
+}
+
+#activatieEnContact {
+   position:fixed;
+   bottom:0;
 }
 
 .topFooter {
    background: rgb(53, 58, 64);
    padding-top: 1.2em;
    padding-bottom: 0.6em;
-   
+   width: 100%;
 }
 
 .bottomFooter {
    background-color: #3498db;
    text-align: center;
    color: black;
+   width: 100%;
+}
+
+.topFooterActCont {
+   background: rgb(53, 58, 64);
+   padding-top: 1.2em;
+   padding-bottom: 0.6em;
+   position:fixed;
+   bottom:0;
+   width: 100%;
+}
+
+.bottomFooterActCont {
+   background-color: #3498db;
+   text-align: center;
+   color: black;
+   position:fixed;
+   bottom:0;
+   width: 100%;
 }
 
 .footer img {
@@ -797,16 +823,6 @@ textarea:hover {
    border:1px solid black;
    background-color: rgba(255, 255, 255, 0.575);
    width: 100%;
-}
-
-
-
-#activatieFooter{
- position: absolute;
- bottom: 0;
-/* .prijzen {
-   background-color: rgb(197, 213, 225);
-} */
 }
 
 .boekingen_Button
