--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -1001,3 +1001,62 @@ textarea:hover {
    background-attachment:fixed;
    background-repeat: no-repeat;
 }
+
+.header_bg
+{
+   text-align: center;
+   width: 100%;
+   background-color: rgb(197, 213, 225);
+}
+
+.header_bg h1
+{
+   color: white;
+   padding-top: 1%;
+}
+
+.bg_Background
+{
+   background-image: url("../images/beach10.jpg");
+   background-position: center;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+   background-size: 100% 100%;
+   
+}
+
+.table-striped
+{
+   
+   margin-top: 5%;
+   margin-left: 30%;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   border: 2px solid black;
+   display: block !important;
+   overflow-x: auto !important;
+   width: min-content !important;
+   
+}
+
+.bgFooter
+{
+  width: 100%;
+  height: 100%;
+}
+
+@media only screen and (max-width: 600px) {
+   
+   .table-striped
+   {
+    
+      margin-top: 5%;
+      margin-left: 15%;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+      border: 2px solid black;
+      display: block !important;
+   overflow-x: auto !important;
+   width: min-content !important;
+      
+   }
+
+ }
