--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -285,16 +285,11 @@ h4 {
    
 }
 
-
-
 #faqFooterFix {
    position: absolute;
    bottom: -30%;
    width: 100%;
-   height: 2.5rem;
-  
- 
-   
+   height: 2.5rem;  
 }
 
 .header2 {
@@ -337,8 +332,6 @@ h4 {
    height: 10%;
    background-color: green;
    position: relative;
-
-
 }
 
 .Contact_Background
@@ -349,9 +342,7 @@ h4 {
    width: 100%;
    margin: 0px;
    padding: 0px;
-   overflow-x: hidden; 
-  
-   
+   overflow-x: hidden;  
 }
 
 .contact_toptext {
@@ -455,8 +446,6 @@ textarea:hover {
    height: 100%;
    margin-top: 0;
    margin-left: 0;
-   
-   
 }
 
 .Reviewheader {
@@ -673,8 +662,6 @@ textarea:hover {
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.06);
 }
 
-;
-
 .selection_show {
    width: 100%;
 }
@@ -825,7 +812,7 @@ textarea:hover {
    
  }
 
- #tijden,#aantal_volwassenen,#aantal_kinderen
+ #tijden,#aantal_volwassenen,#aantal_kinderen,#Vertrek_vliegveld
  {
     width: 100%;
  }
@@ -1013,6 +1000,8 @@ textarea:hover {
 {
    color: white;
    padding-top: 1%;
+   
+   
 }
 
 .bg_Background
@@ -1054,9 +1043,8 @@ textarea:hover {
       box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
       border: 2px solid black;
       display: block !important;
-   overflow-x: auto !important;
-   width: min-content !important;
-      
+      overflow-x: auto !important;
+    width: min-content !important; 
    }
 
  }
@@ -1070,110 +1058,58 @@ textarea:hover {
     border: none !important;
  }
 
- .button_popup {
-   background-color: blue;
-   color: white;
-   padding: 14px 20px;
-   margin: 8px 0;
-   border: none;
-   cursor: pointer;
-   width: 60%;
-   opacity: 0.9;
-   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.658);
-   margin-top: 5%;
+ .bevestigings_Background
+ {
+   background-image: url("../images/beach10.jpg");
+   background-position: left;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+   background-size: 100% 100%;
  }
- 
- .button_popup,.cancelbtn, .deletebtn:hover {
-   opacity:1;
- }
- 
- 
- .cancelbtn, .deletebtn {
-   float: left;
-   width: 50%;
-   margin-top: 5%;
-  
- 
- }
- 
- 
- .cancelbtn {
-    background-color: blue;
-    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.658);
-    font-size: x-large;
+
+ .table-borderless
+ {
     border: 1px solid black;
+ }
+
+ .btn-primary,.btn-secondary
+ {
+    margin-top: 5%;
+ }
+
+ .account_verwijderen
+ {
+    background-color: rgba(255, 255, 255, 0.76);
+    margin-top: 10%;
+    margin-left: 40%;
+    width: 20%;
+    border: 1px solid black;
+    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+    padding-bottom: 1%;
     
  }
- 
- 
- .deletebtn {
-   background-color: #f44336;
-   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.658);
-   font-size: x-large;
-   border: 1px solid black;
+
+ .Account_Background
+ {
+   background-image: url("../images/beach11.jpeg");
+   background-position: center;
+   background-attachment:fixed;
+   background-repeat: no-repeat;
+   background-size: 100% 100%;
  }
- 
- 
- .container {
-   padding: 16px;
+
+ .Account_verwijderen_Header
+ {
    text-align: center;
+   width: 100%;
+   background-color: rgb(197, 213, 225);
+ }
+
+ .Account_verwijderen_Header h1
+ {
+   margin: 0 auto;
+   font-size: 4em;
+   color: white;
+   padding-top: 1%;
  }
  
- 
- .modal {
-   display: none; 
-   position: fixed;
-   z-index: 1;
-   left: 0;
-   top: 0;
-   width: 100%; 
-   height: 100%;
-   overflow: auto; 
-   background-color: rgba(221, 220, 220, 0.5);
-   padding-top: 50px;
-   
- }
- 
- 
- .modal-content {
-   background-color: #fefefe;
-   margin: 5% auto 15% auto; 
-   border: 1px solid #888;
-   width: 80%;
- }
- 
- 
- hr {
-   border: 1px solid #f1f1f1;
-   margin-bottom: 25px;
- }
-  
- 
- .close {
-   position: absolute;
-   right: 35px;
-   top: 15px;
-   font-size: 40px;
-   font-weight: bold;
-   color: #f1f1f1;
- }
- 
- .close:hover,
- .close:focus {
-   color: #f44336;
-   cursor: pointer;
- }
- 
- 
- .clearfix::after {
-   content: "";
-   clear: both;
-   display: table;
- }
- 
- 
- @media screen and (max-width: 300px) {
-   .cancelbtn, .deletebtn {
-      width: 100%;
-   }
- }
