--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -287,9 +287,15 @@ h4 {
 
 #faqFooterFix {
    position: absolute;
-   bottom: -30%;
+   bottom: -70%;
    width: 100%;
    height: 2.5rem;  
+   
+}
+
+.card-body
+{
+  font-size: 0.9rem;
 }
 
 .header2 {
@@ -350,16 +356,40 @@ h4 {
    margin-left: -50%;
 }
 
+
+
 #bookingForm {
    margin-right: 60%;
    margin-left: 0%;
 }
 
-#contact_button {
+.buttonContact {
    background-color: blue;
    color: white;
    width: 60%;
    margin-left: 5%;
+}
+
+@media only screen and (min-width: 360px) 
+{
+  
+.boekingen_Button {
+   background-color: blue;
+   color: white;
+   width: 140%;
+   margin-left: 5%;
+}
+}
+
+
+.contact_footer
+{
+   position:absolute;
+  padding-top: 100px;
+   bottom:0;
+   width:100%;
+   height:60px;
+ 
 }
 
 #contact_naam,#contact_onderwerp,#contact_email
@@ -394,7 +424,7 @@ h4 {
    color: #fff;
    font-weight: 600;
    border-radius: 5px;
-   width: 80%;
+   width: 60%;
    margin-bottom: 5%;
 }
 
@@ -486,6 +516,7 @@ textarea:hover {
    border-radius: 10px;
    font-family: Verdana, Geneva, Tahoma, sans-serif;
    width: 80%;
+   
 }
 
 .textarea {
@@ -776,7 +807,7 @@ textarea:hover {
    {
       width: 60%;
    }
-
+   
 } 
 
 
@@ -840,13 +871,98 @@ textarea:hover {
    font-family: 'Montserrat', sans-serif;
 }
 
+#login-tab,#register-tab
+{
+ border: 1px solid black;
+ box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+ margin-top: 0;
+}
+
+.registreer_fix
+{
+   
+}
+
+.registreer_input
+{
+   width: min-content;
+}
+
+
+#register
+{
+   width: 40%;
+   padding-left: 15%;
+   border: 1px solid black;
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   margin-top: 5%;
+   height: fit-content;
+   
+}
+
+
+@media only screen and (max-width: 900px) 
+{
+   #register
+   {
+      border: 1px solid black;
+      width: 60%;
+      margin-top: 5%;
+      padding-left: 15%; 
+      font-size: small;
+   }
+
+}
+
+#login
+{
+  border: 1px solid black;
+  width: max-content;
+  margin-top: 5%;
+  margin-left: 45%;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+@media only screen and (max-width: 900px) 
+{
+   #login
+{
+   border: 1px solid black;
+  width: 60%;
+  margin-top: 5%;
+  margin-left: 20%;
+  font-size: small;
+  padding-right: 10%;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+}
+
+#loginKnop
+{
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+}
+
+#registratieknop
+{
+   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
+   margin-left: -5%;
+}
+
+.tab-content
+{
+   margin-left: -25%;
+}
+
 #aanmelden_footer
 {
-   position: absolute;
-   bottom: -30%;
-   width: 100%;
-   height: -2.5rem;
-   
+   position:absolute;
+   bottom:0;
+   width:100%;
+   height:160px;
+}
+.aanmelden_tekst
+{
+   margin-top: 5%;
 }
 
 .float-container {
@@ -1011,7 +1127,6 @@ textarea:hover {
    background-attachment:fixed;
    background-repeat: no-repeat;
    background-size: 100% 100%;
-   
 }
 
 .table-striped
@@ -1029,8 +1144,12 @@ textarea:hover {
 
 .bgFooter
 {
-  width: 100%;
-  height: 100%;
+   position:sticky;
+    bottom:0;
+    width:100%;
+    height:60px;
+    display: block;
+  
 }
 
 @media only screen and (max-width: 600px) {
