--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -1131,9 +1131,9 @@ textarea:hover {
 
 .table-striped
 {
-   
    margin-top: 5%;
-   margin-left: 30%;
+   margin-left: 25%;
+   margin-bottom: 5%;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
    border: 2px solid black;
    display: block !important;
@@ -1144,13 +1144,16 @@ textarea:hover {
 
 .bgFooter
 {
-   position:sticky;
+   position:relative;
     bottom:0;
     width:100%;
     height:60px;
-    display: block;
+
+    
   
 }
+
+
 
 @media only screen and (max-width: 600px) {
    
