--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -902,6 +902,9 @@ h4,
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
    margin-top: 5%;
    height: fit-content;
+   border-radius: 10px;
+   background-color: rgba(128, 128, 128, 0.336);
+   
 
 }
 
@@ -916,8 +919,6 @@ h4,
    }
 
 }
-
-
 
 #login {
    border: 1px solid black;
@@ -1131,9 +1132,6 @@ h4,
    display: block !important;
    overflow-x: auto !important;
    width: min-content !important;
-   overflow-y: scroll;
-   height: 500px;
-
 }
 
 .bgFooter {
@@ -1141,9 +1139,6 @@ h4,
    bottom: 0;
    width: 100%;
    height: 60px;
-
-
-
 }
 
 
