--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -359,7 +359,7 @@ h4 {
 
 
 #bookingForm {
-   margin-right: 60%;
+   margin-right: 30%;
    margin-left: 0%;
 }
 
@@ -805,7 +805,7 @@ textarea:hover {
    
    #aantal_Dagen,#aantal_tickets_bus,#aantal_volwassenen,#aantal_kinderen
    {
-      width: 60%;
+      width: 70%;
    }
    
 } 
@@ -814,9 +814,16 @@ textarea:hover {
 #boekingenTable, td, th {
    border:1px solid black;
    background-color: rgba(255, 255, 255, 0.575);
+}
+
+#boekingenTable{
    width: 100%;
 }
 
+#errorMsg{
+   color: red;
+   text-align: center;
+}
 
 
 #activatieFooter{
@@ -970,7 +977,7 @@ textarea:hover {
    width: 40%;
    height: 50%;
    margin-top: 3%;
-   margin-left: 20%;
+   margin-left: 5%;
    margin-bottom: 3%;
    padding-left: 1%;
    padding-top: 3%;
@@ -981,7 +988,6 @@ textarea:hover {
 }
 
 .float-child {
-   
    float: left;
    margin-left: 15%;
 } 
