--- a/Sun Tours-Website/css/styles.css
+++ b/Sun Tours-Website/css/styles.css
@@ -163,9 +163,9 @@ h2.actief {
    margin-left: 0%;
 }
 
-/* #registreerpage{
+ #registreerpage{
    margin-right:0%;
-} */
+} 
 
 
 .accordion_one .panel-group {
@@ -392,10 +392,11 @@ h4 {
  
 }
 
-#contact_naam,#contact_onderwerp,#contact_email
+#contact_naam,#contact_onderwerp,#contact_email,#contact_text
 {
-   width: 70%;
+   width: 40%;
 }
+
 
 .contactArea {
    width: 80%;
@@ -424,7 +425,7 @@ h4 {
    color: #fff;
    font-weight: 600;
    border-radius: 5px;
-   width: 60%;
+   width: 40%;
    margin-bottom: 5%;
 }
 
@@ -887,34 +888,25 @@ textarea:hover {
 #register
 {
    width: 40%;
-   padding-left: 15%;
+   padding-left: 4%;
    border: 1px solid black;
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
    margin-top: 5%;
    height: fit-content;
-   
 }
 
 
-@media only screen and (max-width: 900px) 
-{
-   #register
-   {
-      border: 1px solid black;
-      width: 60%;
-      margin-top: 5%;
-      padding-left: 15%; 
-      font-size: small;
-   }
 
-}
+
+
+
 
 #login
 {
   border: 1px solid black;
-  width: max-content;
+  width: 40%;
   margin-top: 5%;
-  margin-left: 45%;
+  margin-left: 40%;
   box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
 }
 
@@ -923,7 +915,7 @@ textarea:hover {
    #login
 {
    border: 1px solid black;
-  width: 60%;
+  width: 80%;
   margin-top: 5%;
   margin-left: 20%;
   font-size: small;
@@ -959,6 +951,9 @@ textarea:hover {
 {
    margin-top: 5%;
 }
+
+
+
 
 .float-container {
    display: inline-block;
@@ -1058,6 +1053,8 @@ textarea:hover {
    background-color: rgba(255, 255, 255, 0.575);
    box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.5);
    padding-left: 3%;
+   
+  
 }
 
 .password_Background
